--- a/index.html
+++ b/index.html
@@ -29,19 +29,35 @@
 
             newTarget();
 
-            var x = [1, 2, 3, 4, 5, 6, 7, 8, 9, 10, 11, 12];
-
             var crystalValues = [];
 
-            for (i = x.length; i--;) {
-                var random = x.splice(Math.floor(Math.random() * (i + 1)), 1)[0];
-                crystalValues.push(random);
+            function getCrystalValues() {
+
+                var x = [1, 2, 3, 4, 5, 6, 7, 8, 9, 10, 11, 12];
+
+                function randomValueFromArray(arr) {
+                    var index = Math.floor(Math.random() * arr.length);
+                    return arr.splice(index, 1)[0];
+                }
+
+                for (var i = 0; i < 4; ++i) {
+                    crystalValues.push(randomValueFromArray(x));
+                }
+                return crystalValues
             }
 
-            var crystal1 = crystalValues[1],
-                crystal2 = crystalValues[2],
-                crystal3 = crystalValues[3],
-                crystal4 = crystalValues[4];
+            getCrystalValues();
+
+
+            // for (var i = 0; i < xLength; ++i) {
+            //     var random = x.splice(Math.floor(Math.random() * (xLength - i)), 1)[0];
+            //     crystalValues.push(random);
+            // }
+
+            var crystal1 = crystalValues[0],
+                crystal2 = crystalValues[1],
+                crystal3 = crystalValues[2],
+                crystal4 = crystalValues[3];
 
 
 
