starting to add on clock funtions for crystals

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     <h1>Crystal Collector</h1>
     <div>
         <div class="target-box">
-            <h3 class="target-score"></h3>
+            <h3 id="target-score">...</h3>
         </div>
         <div>
             <p>Wins: <span id="wins">0</span></p>
@@ -24,14 +24,14 @@
         </div>
     </div>
     <div class="crystals">
-        <a href=""><img src="./assets/images/crystal-1.gif" alt="" id="crystal-1"></a>
-        <a href=""><img src="./assets/images/crystal-2.gif" alt="" id="crystal-2"></a>
-        <a href=""><img src="./assets/images/crystal-3.gif" alt="" id="crystal-3"></a>
-        <a href=""><img src="./assets/images/crystal-4.gif" alt="" id="crystal-4"></a>
+        <a href="" id="crystal-1"><img src="./assets/images/crystal-1.gif" alt="Crystal One"></a>
+        <a href="" id="crystal-2"><img src="./assets/images/crystal-2.gif" alt="Crystal Two"></a>
+        <a href="" id="crystal-3"><img src="./assets/images/crystal-3.gif" alt="Crystal Three"></a>
+        <a href="" id="crystal-4"><img src="./assets/images/crystal-4.gif" alt="Crystal Four"></a>
     </div>
     <div class="score-box">
         <h3>Your total score is..</h3>
-        <p class="current-score">0</p>
+        <p id="player-score">0</p>
     </div>
 
 
