added # to anchor tag href, was making my page refresh constantly. did on-clicks for each button and hooked up text to target score and player score

--- a/index.html
+++ b/index.html
@@ -24,10 +24,10 @@
         </div>
     </div>
     <div class="crystals">
-        <a href="" id="crystal-1"><img src="./assets/images/crystal-1.gif" alt="Crystal One"></a>
-        <a href="" id="crystal-2"><img src="./assets/images/crystal-2.gif" alt="Crystal Two"></a>
-        <a href="" id="crystal-3"><img src="./assets/images/crystal-3.gif" alt="Crystal Three"></a>
-        <a href="" id="crystal-4"><img src="./assets/images/crystal-4.gif" alt="Crystal Four"></a>
+        <a href="#" id="crystal-1"><img src="./assets/images/crystal-1.gif" alt="Crystal One"></a>
+        <a href="#" id="crystal-2"><img src="./assets/images/crystal-2.gif" alt="Crystal Two"></a>
+        <a href="#" id="crystal-3"><img src="./assets/images/crystal-3.gif" alt="Crystal Three"></a>
+        <a href="#" id="crystal-4"><img src="./assets/images/crystal-4.gif" alt="Crystal Four"></a>
     </div>
     <div class="score-box">
         <h3>Your total score is..</h3>
