--- a/index.html
+++ b/index.html
@@ -24,10 +24,10 @@
         </div>
     </div>
     <div class="crystals">
-        <a href="#" id="crystal-1"><img src="./assets/images/crystal-1.gif" alt="Crystal One"></a>
-        <a href="#" id="crystal-2"><img src="./assets/images/crystal-2.gif" alt="Crystal Two"></a>
-        <a href="#" id="crystal-3"><img src="./assets/images/crystal-3.gif" alt="Crystal Three"></a>
-        <a href="#" id="crystal-4"><img src="./assets/images/crystal-4.gif" alt="Crystal Four"></a>
+        <img src="./assets/images/crystal-1.gif" id="crystal-1" alt="Crystal One">
+        <img src="./assets/images/crystal-2.gif" id="crystal-2" alt="Crystal Two">
+        <img src="./assets/images/crystal-3.gif" id="crystal-3" alt="Crystal Three">
+        <img src="./assets/images/crystal-4.gif" id="crystal-4" alt="Crystal Four">
     </div>
     <div class="score-box">
         <h3>Your total score is..</h3>
