trying to get the click funtion to reset if score is correct and if i go over

--- a/index.html
+++ b/index.html
@@ -19,8 +19,8 @@
             <h3 id="target-score">...</h3>
         </div>
         <div>
-            <p>Wins: <span id="wins">0</span></p>
-            <p>Losses: <span id="losses">0</span></p>
+            <p>Wins: <span id="wins">...</span></p>
+            <p>Losses: <span id="losses">...</span></p>
         </div>
     </div>
     <div class="crystals">
