--- a/index.html
+++ b/index.html
@@ -13,12 +13,15 @@
 </head>
 
 <body>
+    <audio id="sound">
+        <source src="./assets/Sounds/sound-4.mp3" type="audio/mpeg">
+    </audio>
 
     <section>
         <h1 id="title">Crystal Collector</h1>
         <div class="target-box">
             <h5>Target Score</h5>
-            <h3 id="target-score">...</h3>
+            <h3 id="target-score"></h3>
         </div>
         <div class="crystals">
             <img src="./assets/images/crys-1.png" id="crystal-1" class="object o1" alt="Crystal One">
@@ -34,7 +37,11 @@
             <p>Wins: <span id="wins">...</span></p>
             <p>Losses: <span id="losses">...</span></p>
         </div>
+        <div class="instructions">
+
+        </div>
     </section>
+
 
     <script type="text/javascript" src="assets/javascript/game.js">
 
