--- a/index.html
+++ b/index.html
@@ -42,6 +42,9 @@
         </div>
     </section>
 
+    <footer>
+        <p>By Gerard Pelly</p>
+    </footer>
 
     <script type="text/javascript" src="assets/javascript/game.js">
 
