--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
     <section>
         <h1 id="title">Crystal Collector</h1>
         <div class="target-box">
-            <h5>Target Score</h5>
+            <h5>Target Score:</h5>
             <h3 id="target-score"></h3>
         </div>
         <div class="crystals">
