--- a/index.html
+++ b/index.html
@@ -13,9 +13,7 @@
 </head>
 
 <body>
-    <audio id="sound">
-        <source src="./assets/Sounds/sound-4.mp3" type="audio/mpeg">
-    </audio>
+    <audio id="sound" src="./assets/Sounds/sound-4.mp3" type="audio/mpeg"></audio>
 
     <section>
         <h1 id="title">Crystal Collector</h1>
